# cindent-snapshots

./: .vilerc  ChangeLog  Makefile  NEWS  OChangeLog  Projects  README  VMS-README  aclocal.m4  args.c  backup.c  backup.h  comments.c  configure  configure.in  globs.c  gperf-cc.c  gperf.c  indent-cc.gperf  indent.1  indent.c  indent.gperf  indent.h  indent.html  indent.info  indent.texinfo  indent_foot.html  indent_toc.html  io.c  lexi.c  make-man.pl  makefile.in  memmove.c  parse.c  sys.h  tdindent.1  texinfo.tex  version.h
package/: indent.spec
package/debian/: changelog  control  copyright  postinst  preinst  prerm  rules  watch
scripts/: bsd-indent  bsd-profile  cdk-indent  cdk-profile  flx-indent  flx-profile  gnu-indent  gnu-profile  jpf-indent  jpf-profile  lnx-indent  lnx-profile  ncu-indent  ncu-profile  tdindent  tin-indent  tin-profile  twm-indent  vtt-indent  vtt-profile  xorg-indent  xxx-compare  xxx-indent  xxx-profile  yak-indent  yak-profile
testing/: bsd-indent  case000-bsd.msg  case000-bsd.ref  case000-cdk.msg  case000-cdk.ref  case000-flx.msg  case000-gnu.msg  case000-gnu.ref  case000-jpf.msg  case000-jpf.ref  case000-lnx.msg  case000-lnx.ref  case000-ncu.msg  case000-ncu.ref  case000-tin.msg  case000-tin.ref  case000-twm.msg  case000-vtt.msg  case000-vtt.ref  case000-xorg.msg  case000-xorg.ref  case000-xxx.msg  case000-xxx.ref  case000-yak.msg  case000-yak.ref  case000.in  case001-bsd.msg  case001-bsd.ref  case001-cdk.msg  case001-cdk.ref  case001-flx.msg  case001-flx.ref  case001-gnu.msg  case001-gnu.ref  case001-jpf.msg  case001-jpf.ref  case001-lnx.msg  case001-lnx.ref  case001-ncu.msg  case001-tin.msg  (+168 more)
